--- a/package.json
+++ b/package.json
@@ -18,5 +18,5 @@
   "bugs": {
     "url": "https://github.com/MarkehMe/TabTalk/issues"
   },
-  "homepage": "https://github.com/MarkehMe/TabTalk",
+  "homepage": "https://github.com/MarkehMe/TabTalk"
 }
